--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ pluggy==1.5.0
 port-for==0.7.4
 psutil==7.0.0
 psycopg==3.2.6
-psycopg2==2.9.10
+psycopg2-binary==2.9.10
 py4j==0.10.9.7
 pycodestyle==2.13.0
 pyflakes==3.3.2
